tests/type/errors/precondition_not_bool.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

scene lobby requires 1 + 2
{
}

scene main
{
}
